--- a/src/index.css
+++ b/src/index.css
@@ -202,6 +202,17 @@ Cart
   border: 1px solid var(--clr-red-dark);
   margin-top: 2.25rem;
 }
+
+.logout-btn {
+  background: transparent;
+  padding: 0.5rem 1rem;
+  color: var(--clr-red-dark);
+  margin-top: 2.25rem;
+    box-shadow: none;
+}
+
+
+
 .clear-btn:hover {
   background: var(--clr-red-light);
   color: var(--clr-red-dark);
@@ -262,4 +273,9 @@ Cart Item
   margin-bottom: 0;
   font-size: 1.25rem;
   line-height: 1;
+}
+.wylog-text{
+  letter-spacing: 1px;
+  color: white;
+  display: block;
 }
