--- a/src/index.css
+++ b/src/index.css
@@ -283,3 +283,50 @@ Cart Item
   font-family: 'Catamaran', sans-serif;
   font-weight: bold;
 }
+
+.card {
+  width: 200px;
+  color: var(--clr-primary);
+  height: 200px;
+  border-radius: 50%;
+
+  font-size: 7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  transition: box-shadow 0.3s ease-in-out;
+}
+.icon-card {
+  color: var(--clr-primary);
+}
+.home-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  height: 100vh;
+}
+
+.cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.card:nth-of-type(1) {
+  margin-right: 20px;
+  margin-top: 2rem;
+}
+
+.card:nth-of-type(2) {
+  margin-left: 20px;
+  margin-top: 2rem;
+}
+
+.card:hover {
+  -webkit-box-shadow: 0px 0px 5px 5px var(--clr-primary);
+  box-shadow: 0px 0px 5px 5px var(--clr-primary);
+}
